update package and documentation

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
                 "OalidCse\\DBExport\\DBExportServiceProvider"
             ],
             "aliases": {
-                
+                "DBExport" : "OalidCse\\DBExport\\DBExportController"
             }
         }
     }
